discussion report updated
report for game and survey data updated

--- a/PreliminaryAnalysis.Rmd
+++ b/PreliminaryAnalysis.Rmd
@@ -26,10 +26,10 @@ library(ggplot2)
 library(dplyr)
 library(RColorBrewer)
 library(GGally)
-# library(vegan)
-# library(cluster)
-# library(NbClust);library(kohonen)
-# library(mclust); library(clValid)
+library(vegan)
+library(cluster)
+library(NbClust);library(kohonen)
+library(mclust); library(clValid)
 library(ggmap)
 library(animation)
 library(gridExtra)
@@ -367,10 +367,10 @@ pm4 <- ggpairs(data= filter(dat, dat$part == T),
               mapping=aes(color= Treatment, alpha=0.5), title='Color by treatment, second part') 
 
 #grid.arrange(
-  pm1   + theme(text= element_text(family='Helvetica', size=8))
-  pm2   + theme(text= element_text(family='Helvetica', size=8))
-  pm3   + theme(text= element_text(family='Helvetica', size=8))
-  pm4   + theme(text= element_text(family='Helvetica', size=8))
+  pm1   + theme(text= element_text(family='Helvetica', size=6))
+  pm2   + theme(text= element_text(family='Helvetica', size=6))
+  pm3   + theme(text= element_text(family='Helvetica', size=6))
+  pm4   + theme(text= element_text(family='Helvetica', size=6))
 #  ncol=2, nrow=2
 #)
 
